--- a/registration-kit.html
+++ b/registration-kit.html
@@ -26,26 +26,25 @@
 
 						<div class="text-center">
 							<p class="fz-22 text-dark font-weight-bold">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
-							<p class="mb-5">Lorem ipsum dolor sit amet, consectetur? <a href="#!">Login</a></p>
+							<p>Lorem ipsum dolor sit amet, consectetur? <a href="#!">Login</a></p>
 						</div>
 
-						<div class="card card-3 card-steps py-4">
+						<div class="card card-3 card-steps py-4 mt-5">
 
-						  <div class="nav nav-tabs nav-1">
-						    <a class="nav-item nav-link active" data-toggle="tab" href="#a-1">
-						    	<div class="fz-16 text-black mb-2">
-										<span class="step">1</span> <span class="align-middle">Account Information</span>
-									</div>
-								</a>
-						    <a class="nav-item nav-link" data-toggle="tab" href="#a-2">
-						    	<div class="fz-16 text-black mb-2">
-						    		<span class="step">2</span> <span class="align-middle">Kit Activation</span>
-						    	</div>
-								</a>
+						  <div class="row no-gutters progress-wrapper-2 progress-wrapper-4 mb-5">
+						    <div class="col">
+									<div class="step">1</div> <div class="d-inline align-middle">Account Information</div>
+								</div>
+						    <div class="col">
+					    		<div class="step">2</div> <div class="d-inline align-middle">Kit Activation</div>
+								</div>
+								<div class="progress">
+									<div class="progress-bar bg-success"></div>
+								</div>
 						  </div>
 
-							<div class="tab-content pt-5">
-							  <div class="tab-pane fade show active" id="a-1">
+							<div class="card card-3 no-card pt-5">
+							  <div class="step-1">
 							  	<div class="row">
 										<div class="col-md-6">
 											<div class="fz-16 text-black mb-4">
@@ -69,9 +68,12 @@
 												</div>
 											</div>
 											<div class="form-group mb-md-4">
-												<input type="password" class="form-control" placeholder="Confirm Password">
+												<div class="input-password">
+													<input type="password" class="form-control" placeholder="Confirm Password">
+													<img src="img/password.svg" alt="" class="img-password">
+												</div>
 											</div>
-											<p class="text-gray mb-2 pt-2">For quality assurance, please select your gender</p>
+											<p class="text-gray mb-2 pt-2">For quality assurance, please select your gender*</p>
 											<div class="form-row">
 												<div class="col-6 form-group mb-3">
 													<select class="form-control">
@@ -82,7 +84,6 @@
 											</div>
 											<hr class="d-md-none">
 										</div>
-
 										<div class="col-md-6 mt-3 mt-md-0">
 											<div class="fz-16 text-black mb-4">
 												<span class="align-middle">Shipping Information</span>
@@ -123,34 +124,34 @@
 											</div>
 										</div>
 									</div>
-
 									<hr>
 									<div class="text-center text-md-right pt-2">
 										<button class="btn btn-success font-weight-normal py-2" id="step-2">Save and Continue</button>
 									</div>
 							  </div>
-
-							  <div class="tab-pane fade text-center" id="a-2">
+							  <div class="step-2 text-center">
 									<h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit</h5>
 									<p>Lorem ipsum dolor sit amet, consectetur</p>
 									<img src="img/art/DNA-Kit.png" alt="">
 									<hr>
-									<div class="row justify-content-center text-left text-md-center">
-										<div class="col-md-6">
-											<h6 class="font-weight-normal mb-1">Enter the ‘Product ID’ on the front of the box</h6>
-											<p>Enter the Product ID located on the top of your box and starts with the letters SK, VT, NC, GC, SN, or HA.</p>
-											<div class="form-group mb-2 mt-4">
-												<input type="text" class="form-control" placeholder="Product ID">
+									<div class="text-left text-md-center mt-5">
+										<div class="row justify-content-center">
+											<div class="col-md-6">
+												<h6 class="font-weight-normal mb-1">Enter the ‘Product ID’ on the front of the box</h6>
+												<p>Enter the Product ID located on the top of your box and starts with the letters SK, VT, NC, GC, SN, or HA.</p>
+												<div class="form-group mb-2 mt-4">
+													<input type="text" class="form-control" placeholder="Product ID">
+												</div>
+											</div>
+										</div>
+										<div class="pb-2 my-4">
+											<div class="custom-control custom-checkbox d-inline-block">
+										  	<input type="checkbox" class="custom-control-input" id="checkbox2">
+										  	<label class="custom-control-label" for="checkbox2">I have read and agree to <a href="#!">Privacy Policy</a> and <a href="#!" target="_blank">Terms of Use</a></label>
 											</div>
 										</div>
 									</div>
-									<div class="pb-2 my-4 text-left text-md-center">
-										<div class="custom-control custom-checkbox d-inline-block">
-									  	<input type="checkbox" class="custom-control-input" id="checkbox2">
-									  	<label class="custom-control-label" for="checkbox2">I have read and agree to <a href="#!">Privacy Policy</a> and <a href="#!" target="_blank">Terms of Use</a></label>
-										</div>
-									</div>
-									<button class="btn btn-success font-weight-normal py-2 mb-4" id="step-2">Save and Activate</button>
+									<button class="btn btn-success font-weight-normal py-2 mb-4">Save and Activate</button>
 							  </div>
 							</div>
 
