--- a/blog-clicked.html
+++ b/blog-clicked.html
@@ -42,7 +42,7 @@
 		<section class="section">
 			<div class="container">
 				<div class="row justify-content-center">
-					<div class="col-md-8 col-lg-9 mb-4">
+					<div class="col-md-8 col-xl-9 mb-4">
 						<div class="card fz-18">
 							<div class="text-center pb-3">
 								<img src="img/art/empty.svg" class="w-100" alt="">
@@ -82,19 +82,17 @@
 							<p>LifeDNA’s Health Report reveals your body’s natural response to fats, carbs, vitamins, minerals, and more.</p>
 							<p>You can use this information to live a better, healthier life while achieving the body you want with less hard work.</p>
 							<p class="py-5 text-success-2">To learn more, visit our LifeDNA Reports page here.</p>
-							<div class="row justify-content-center pb-4 fz-14">
-								<div class="col-sm-4 col-lg-3 p-0 mx-2">
+							<div class="form-row justify-content-center pb-4 fz-14">
+								<div class="col-sm-4 col-lg-3">
 									<button class="btn btn-outline-success btn-block mb-3">Previous</button>
 								</div>
-								<div class="col-sm-4 col-lg-3 p-0 mx-2">
+								<div class="col-sm-4 col-lg-3">
 									<button class="btn btn-success btn-block mb-3">Next</button>
 								</div>
 							</div>
 						</div>
-						
 					</div>
-
-					<div class="col-sm-8 col-md-4 col-lg-3">
+					<div class="col-sm-8 col-md-4 col-xl-3">
 						<div class="card card-3">
 							<div class="d-flex">
 								<h6 class="font-weight-normal mt-1">Social:</h6>
@@ -106,24 +104,30 @@
 							</div>
 							<hr class="mt-0">
 							<h6 class="font-weight-normal">Popular Post</h6>
-							<div class="row mb-5">
-								<div class="col-5 mb-3 mb-md-0">
-									<img src="img/art/empty.svg" alt="">
+							<div class="mb-5 fz-10">
+								<div class="form-row mb-3">
+									<div class="col-5">
+										<img src="img/art/empty.svg" alt="">
+									</div>
+									<div class="col-7">
+										<div>Could Vanilla Be the Secret to Stopping Your Sweet Tooth?</div>
+									</div>
 								</div>
-								<div class="col-7 fz-10 p-md-0">
-									<p>Could Vanilla Be the Secret to Stopping Your Sweet Tooth?</p>
+								<div class="form-row mb-3">
+									<div class="col-5">
+										<img src="img/art/empty.svg" alt="">
+									</div>
+									<div class="col-7">
+										<div>5 Free Ways to Get a Better Body Fast</div>
+									</div>
 								</div>
-								<div class="col-5 mb-3 mb-md-0">
-									<img src="img/art/empty.svg" alt="">
-								</div>
-								<div class="col-7 fz-10 p-md-0">
-									<p>5 Free Ways to Get a Better Body Fast</p>
-								</div>
-								<div class="col-5 mb-3 mb-md-0">
-									<img src="img/art/empty.svg" alt="">
-								</div>
-								<div class="col-7 fz-10 p-md-0">
-									<p>Brown Fat: Your Body’s Secret to Getting Lean and Looking Better.</p>
+								<div class="form-row mb-3">
+									<div class="col-5">
+										<img src="img/art/empty.svg" alt="">
+									</div>
+									<div class="col-7">
+										<div>Brown Fat: Your Body’s Secret to Getting Lean and Looking Better.</div>
+									</div>
 								</div>
 							</div>
 							<h6 class="font-weight-normal">Join Our Newsletter</h6>
