--- a/blog.html
+++ b/blog.html
@@ -42,7 +42,7 @@
 		<section class="section">
 			<div class="container">
 				<div class="row justify-content-center">
-					<div class="col-md-8 col-lg-9">
+					<div class="col-md-8 col-xl-9">
 						<div class="owl-2 owl-carousel owl-theme">
 							<div class="row">
 								<div class="col-lg-6 mb-4">
@@ -155,7 +155,7 @@
 							</div>
 						</div>
 					</div>
-					<div class="col-sm-8 col-md-4 col-lg-3">
+					<div class="col-sm-8 col-md-4 col-xl-3">
 						<div class="card card-3">
 							<div class="d-flex">
 								<h6 class="font-weight-normal mt-1">Social:</h6>
@@ -167,24 +167,30 @@
 							</div>
 							<hr class="mt-0">
 							<h6 class="font-weight-normal">Popular Post</h6>
-							<div class="row mb-5">
-								<div class="col-5 mb-3 mb-md-0">
-									<img src="img/art/empty.svg" alt="">
+							<div class="mb-5 fz-10">
+								<div class="form-row mb-3">
+									<div class="col-5">
+										<img src="img/art/empty.svg" alt="">
+									</div>
+									<div class="col-7">
+										<div>Could Vanilla Be the Secret to Stopping Your Sweet Tooth?</div>
+									</div>
 								</div>
-								<div class="col-7 fz-10 p-md-0">
-									<p>Could Vanilla Be the Secret to Stopping Your Sweet Tooth?</p>
+								<div class="form-row mb-3">
+									<div class="col-5">
+										<img src="img/art/empty.svg" alt="">
+									</div>
+									<div class="col-7">
+										<div>5 Free Ways to Get a Better Body Fast</div>
+									</div>
 								</div>
-								<div class="col-5 mb-3 mb-md-0">
-									<img src="img/art/empty.svg" alt="">
-								</div>
-								<div class="col-7 fz-10 p-md-0">
-									<p>5 Free Ways to Get a Better Body Fast</p>
-								</div>
-								<div class="col-5 mb-3 mb-md-0">
-									<img src="img/art/empty.svg" alt="">
-								</div>
-								<div class="col-7 fz-10 p-md-0">
-									<p>Brown Fat: Your Body’s Secret to Getting Lean and Looking Better.</p>
+								<div class="form-row mb-3">
+									<div class="col-5">
+										<img src="img/art/empty.svg" alt="">
+									</div>
+									<div class="col-7">
+										<div>Brown Fat: Your Body’s Secret to Getting Lean and Looking Better.</div>
+									</div>
 								</div>
 							</div>
 							<h6 class="font-weight-normal">Join Our Newsletter</h6>
