--- a/chart.html
+++ b/chart.html
@@ -120,177 +120,72 @@
 					<div class="py-md-3">
 						<p class="fz-22 text-black pb-md-3">Your Result Compared To LifeDNA Members</p>
 						<div class="canvas">
-							<canvas id="canvas"></canvas>
-						</div>
-						<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
-						<script>
+							<canvas id="canvas">
+								<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
+								<script>
 
-							var chart    = document.getElementById('canvas').getContext('2d'),
-							    gradient = chart.createLinearGradient(0, 0, 0, 320),
-							 		pointImage  = new Image();
-    	
-						 	pointImage.src = "img/man.svg";
-							gradient.addColorStop(0, 'rgba(65, 199, 82, 1)');
-							gradient.addColorStop(1, 'rgba(65, 199, 82, 0)');
+									var chart    = document.getElementById('canvas').getContext('2d'),
+									    gradient = chart.createLinearGradient(0, 0, 0, 320),
+									 		pointImage  = new Image();
+		    	
+								 	pointImage.src = "img/man.svg";
+									gradient.addColorStop(0, 'rgba(65, 199, 82, 1)');
+									gradient.addColorStop(1, 'rgba(65, 199, 82, 0)');
 
-							Chart.defaults.global.defaultFontColor = '#777';
-							Chart.defaults.global.defaultFontFamily = '"ProximaNova", Arial, Helvetica, sans-serifs';
-							Chart.defaults.global.defaultFontSize = 14;
+									Chart.defaults.global.defaultFontColor = '#777';
+									Chart.defaults.global.defaultFontFamily = '"ProximaNova", Arial, Helvetica, sans-serifs';
+									Chart.defaults.global.defaultFontSize = 14;
 
-							var data  = {
-							    labels: ["Low", "Slightly Low", "Intermediate", "Slightly High", "High"],
-							    datasets: [{
-										label: 'Result',
-										backgroundColor: gradient,
-										pointBackgroundColor: '#fff',
-										pointHoverBackgroundColor: '#fff',
-										pointRadius: 4,
-										pointHoverRadius: 5,
-										borderWidth: 2,
-										pointHoverBorderWidth: 2,
-										borderColor: '#41C752',
-										data: [20, 30, 27, 23, 40],
-										pointStyle: ['', pointImage, '', '', ''],
-							    }]
-							};
+									var data  = {
+									    labels: ["Low", "Slightly Low", "Intermediate", "Slightly High", "High"],
+									    datasets: [{
+												label: 'Result',
+												backgroundColor: gradient,
+												pointBackgroundColor: '#fff',
+												pointHoverBackgroundColor: '#fff',
+												pointRadius: 4,
+												pointHoverRadius: 5,
+												borderWidth: 2,
+												pointHoverBorderWidth: 2,
+												borderColor: '#41C752',
+												data: [20, 30, 27, 23, 40],
+												pointStyle: ['', pointImage, '', '', ''],
+									    }]
+									};
 
-							var options = {
-								maintainAspectRatio: false,
-								scales: {
-									xAxes: [{
-										gridLines: {
-											color: '#EAF0F4',
-										}
-									}],
-									yAxes: [{
-										ticks: {
-			                max: 50,
-			                min: 10,
-			                stepSize: 10,
-				            },
-										gridLines: {
-											color: '#EAF0F4',
-										}
-									}]
-								},
-								legend: {
-									display: false
-								},
-							};
-
-							var chartInstance = new Chart(chart, {
-						    type: 'line',
-						    data: data,
-								options: options
-							});
-
-						</script>
-
-						<!-- <script>
-							var config = {
-								type: 'line',
-								data: {
-									labels: ['January', 'February', 'March', 'April', 'May', 'June', 'July'],
-									datasets: [{
-										label: 'dataset - big points',
-										data: [
-											randomScalingFactor(),
-											randomScalingFactor(),
-											randomScalingFactor(),
-											randomScalingFactor(),
-											randomScalingFactor(),
-											randomScalingFactor(),
-											randomScalingFactor()
-										],
-										backgroundColor: window.chartColors.red,
-										borderColor: window.chartColors.red,
-										fill: false,
-										borderDash: [5, 5],
-										pointRadius: 15,
-										pointHoverRadius: 10,
-									}, {
-										label: 'dataset - individual point sizes',
-										data: [
-											randomScalingFactor(),
-											randomScalingFactor(),
-											randomScalingFactor(),
-											randomScalingFactor(),
-											randomScalingFactor(),
-											randomScalingFactor(),
-											randomScalingFactor()
-										],
-										backgroundColor: window.chartColors.blue,
-										borderColor: window.chartColors.blue,
-										fill: false,
-										borderDash: [5, 5],
-										pointRadius: [2, 4, 6, 18, 0, 12, 20],
-									}, {
-										label: 'dataset - large pointHoverRadius',
-										data: [
-											randomScalingFactor(),
-											randomScalingFactor(),
-											randomScalingFactor(),
-											randomScalingFactor(),
-											randomScalingFactor(),
-											randomScalingFactor(),
-											randomScalingFactor()
-										],
-										backgroundColor: window.chartColors.green,
-										borderColor: window.chartColors.green,
-										fill: false,
-										pointHoverRadius: 30,
-									}, {
-										label: 'dataset - large pointHitRadius',
-										data: [
-											randomScalingFactor(),
-											randomScalingFactor(),
-											randomScalingFactor(),
-											randomScalingFactor(),
-											randomScalingFactor(),
-											randomScalingFactor(),
-											randomScalingFactor()
-										],
-										backgroundColor: window.chartColors.yellow,
-										borderColor: window.chartColors.yellow,
-										fill: false,
-										pointHitRadius: 20,
-									}]
-								},
-								options: {
-									responsive: true,
-									legend: {
-										position: 'bottom',
-									},
-									hover: {
-										mode: 'index'
-									},
-									scales: {
-										x: {
-											display: true,
-											scaleLabel: {
-												display: true,
-												labelString: 'Month'
-											}
+									var options = {
+										maintainAspectRatio: false,
+										scales: {
+											xAxes: [{
+												gridLines: {
+													color: '#EAF0F4',
+												}
+											}],
+											yAxes: [{
+												ticks: {
+					                max: 50,
+					                min: 10,
+					                stepSize: 10,
+						            },
+												gridLines: {
+													color: '#EAF0F4',
+												}
+											}]
 										},
-										y: {
-											display: true,
-											scaleLabel: {
-												display: true,
-												labelString: 'Value'
-											}
-										}
-									},
-									title: {
-										display: true,
-										text: 'Chart.js Line Chart - Different point sizes'
-									}
-								}
-							};
-							window.onload = function() {
-								var ctx = document.getElementById('canvas').getContext('2d');
-								window.myLine = new Chart(ctx, config);
-							};
-						</script> -->
+										legend: {
+											display: false
+										},
+									};
+
+									var chartInstance = new Chart(chart, {
+								    type: 'line',
+								    data: data,
+										options: options
+									});
+
+								</script>
+							</canvas>
+						</div>
 					</div>
 				</div>
 			</div>
