--- a/questions-carousel.html
+++ b/questions-carousel.html
@@ -22,120 +22,283 @@
 		<section class="section d-flex flex-column text-center">
 			<div class="container my-auto">
 				<div class="owl-3 owl-carousel owl-theme">
-					<div>
+					<div class="slide">
 						<h3 class="mb-4">Lorem Ipsum Dolor?</h3>
 						<div class="row justify-content-center">
-							<div class="col-3">
+							<div class="col-6 col-sm-4 col-lg-3">
 							  <label class="radio-group-2">
                   <input type="radio" name="color" value="1">
-                  <span>Yes</span>
+                  <div>
+                  	<div class="fz-18">Yes</div>
+                	</div>
                 </label>
 							</div>
-							<div class="col-3">
+							<div class="col-6 col-sm-4 col-lg-3">
 								<label class="radio-group-2">
                   <input type="radio" name="color" value="2">
-                  <span>No</span>
+                  <div>
+                  	<div class="fz-18">No</div>
+                	</div>
                 </label>
 							</div>
 						</div>
-						<div class="text-left">
-							<a href="#!" class="a1 fz-16">
-								<img src="img/art/arrow-art2.svg" alt="" width="w-15">
-								<span>Back</span>
+						<div class="text-left pt-5">
+							<a href="#!" class="back fz-16">
+								<img src="img/art/arrow-art2.svg" alt="" width="15">
+								<span class="align-middle">Back</span>
 							</a>
 						</div>
 					</div>
-					<div>
+					<div class="slide">
+						<h3 class="mb-4">Lorem Ipsum Dolor?</h3>
 						<div class="row justify-content-center text-center">
-							<div class="col-4">
-								<h3>Lorem Ipsum Dolor?</h3>
-								<input type="text" class="form-control fz-18 py-4" placeholder="Lorem Ipsum Dolor">
+							<div class="col-sm-8 col-lg-4">
+								<input type="text" class="form-control fz-18 p-4" placeholder="Lorem Ipsum Dolor">
 							</div>
 						</div>
-						<div class="row align-items-center">
-							<div class="col-4">
-								<a href="#!" class="a1 fz-16">
+						<div class="row align-items-center pt-5">
+							<div class="col-6 col-md-4 text-left">
+								<a href="#!" class="back fz-16">
 									<img src="img/art/arrow-art2.svg" alt="">
-									<span>Back</span>
+									<span class="align-middle">Back</span>
 								</a>
 							</div>
-							<div class="col-4 text-center">
-								<button class="btn btn-success px-5 fz-16">Next</button>
+							<div class="col-6 col-md-4 text-right text-md-center">
+								<button class="btn btn-success px-5 py-2 fz-16" disabled>Next</button>
 							</div>
 						</div>
 					</div>
-					<div>
-						<div class="row justify-content-center text-center">
-							<div class="col-6">
-								<h3>Lorem Ipsum Dolor?</h3>
+					<div class="slide">
+						<h3 class="mb-4">Lorem Ipsum Dolor?</h3>
+						<div class="row justify-content-center">
+							<div class="col-sm-6 col-md-4 col-lg-3">
+							  <label class="radio-group-2">
+                  <input type="radio" name="color-2" value="1">
+                  <div>
+                  	<div class="fz-18">Lorem Ipsum Dolor</div>
+                	</div>
+                </label>
 							</div>
-							<div class="custom-radios custom-radios2">
-									<div class="row">
-										<div class="col-3">
-											<div class="d-block">
-								    		<input type="radio" id="color-3" name="color1" value="color-3" checked>
-								    		<label class="fz-18" for="color-3">
-								    			<span>Lorem Ipsum Dolor</span>
-								    		</label>
-								  		</div>
-										  <div class="d-inline-block">
-										    <input type="radio" id="color-4" name="color1" value="color-4">
-										    <label class="fz-18" for="color-4">
-										    	<span>Lorem Ipsum Dolor</span>
-										    </label>
-										  </div>
-										</div>
-										<div class="col-3">
-											<div class="d-inline-block">
-								    		<input type="radio" id="color-5" name="color1" value="color-5">
-								    		<label class="fz-18" for="color-5">
-								    			<span>Lorem Ipsum Dolor</span>
-								    		</label>
-								  		</div>
-										  <div class="d-inline-block">
-										    <input type="radio" id="color-6" name="color1" value="color-6">
-										    <label class="fz-18" for="color-6">
-										    	<span>Lorem Ipsum Dolor</span>
-										    </label>
-										  </div>
-										</div>
-										<div class="col-3">
-											<div class="d-inline-block">
-								    		<input type="radio" id="color-7" name="color1" value="color-7">
-								    		<label class="fz-18" for="color-7">
-								    			<span>Lorem Ipsum Dolor</span>
-								    		</label>
-								  		</div>
-										  <div class="d-inline-block">
-										    <input type="radio" id="color-8" name="color1" value="color-8">
-										    <label class="fz-18" for="color-8">
-										    	<span>Lorem Ipsum Dolor</span>
-										    </label>
-										  </div>
-										</div>
-										<div class="col-3">
-											<div class="d-inline-block">
-								    		<input type="radio" id="color-9" name="color1" value="color-9">
-								    		<label class="fz-18" for="color-9">
-								    			<span>Lorem Ipsum Dolor</span>
-								    		</label>
-								  		</div>
-										  <div class="d-inline-block">
-										    <input type="radio" id="color-10" name="color1" value="color-10">
-										    <label class="fz-18" for="color-10">
-										    	<span>Lorem Ipsum Dolor</span>
-										    </label>
-										  </div>
-										</div>
-									</div>
-						  </div>
+							<div class="col-sm-6 col-md-4 col-lg-3">
+								<label class="radio-group-2">
+                  <input type="radio" name="color-2" value="2">
+                  <div>
+                  	<div class="fz-18">Lorem Ipsum Dolor</div>
+                	</div>
+                </label>
+							</div>
+							<div class="col-sm-6 col-md-4 col-lg-3">
+								<label class="radio-group-2">
+                  <input type="radio" name="color-2" value="3">
+                  <div>
+                  	<div class="fz-18">Lorem Ipsum Dolor</div>
+                	</div>
+                </label>
+							</div>
+							<div class="col-sm-6 col-md-4 col-lg-3">
+								<label class="radio-group-2">
+                  <input type="radio" name="color-2" value="4">
+                  <div>
+                  	<div class="fz-18">Lorem Ipsum Dolor</div>
+                	</div>
+                </label>
+							</div>
+							<div class="col-sm-6 col-md-4 col-lg-3">
+								<label class="radio-group-2">
+                  <input type="radio" name="color-2" value="5">
+                  <div>
+                  	<div class="fz-18">Lorem Ipsum Dolor</div>
+                	</div>
+                </label>
+							</div>
+							<div class="col-sm-6 col-md-4 col-lg-3">
+								<label class="radio-group-2">
+                  <input type="radio" name="color-2" value="6">
+                  <div>
+                  	<div class="fz-18">Lorem Ipsum Dolor</div>
+                	</div>
+                </label>
+							</div>
+							<div class="col-sm-6 col-md-4 col-lg-3">
+								<label class="radio-group-2">
+                  <input type="radio" name="color-2" value="7">
+                  <div>
+                  	<div class="fz-18">Lorem Ipsum Dolor</div>
+                	</div>
+                </label>
+							</div>
+							<div class="col-sm-6 col-md-4 col-lg-3">
+								<label class="radio-group-2">
+                  <input type="radio" name="color-2" value="8">
+                  <div>
+                  	<div class="fz-18">Lorem Ipsum Dolor</div>
+                	</div>
+                </label>
+							</div>
 						</div>
-						<div class="row">
-							<div class="col">
-								<a href="#!" class="a1 fz-16">
+						<div class="text-left pt-5">
+							<a href="#!" class="back fz-16">
+								<img src="img/art/arrow-art2.svg" alt="" width="15">
+								<span class="align-middle">Back</span>
+							</a>
+						</div>
+					</div>
+					<div class="slide">
+						<h3 class="mb-4">Lorem Ipsum Dolor?</h3>
+						<div class="row justify-content-center">
+							<div class="col-sm-6 col-md-4 col-lg-3">
+							  <label class="radio-group-2 checkbox-group-2">
+                  <input type="checkbox" name="color-3" value="1">
+                  <div>
+                  	<div class="fz-18">Lorem Ipsum Dolor</div>
+                	</div>
+                </label>
+							</div>
+							<div class="col-sm-6 col-md-4 col-lg-3">
+								<label class="radio-group-2 checkbox-group-2">
+                  <input type="checkbox" name="color-3" value="2">
+                  <div>
+                  	<div class="fz-18">Lorem Ipsum Dolor</div>
+                	</div>
+                </label>
+							</div>
+							<div class="col-sm-6 col-md-4 col-lg-3">
+								<label class="radio-group-2 checkbox-group-2">
+                  <input type="checkbox" name="color-3" value="3">
+                 	<div>
+                  	<div class="fz-18">Lorem Ipsum Dolor</div>
+                	</div>
+                </label>
+							</div>
+							<div class="col-sm-6 col-md-4 col-lg-3">
+								<label class="radio-group-2 checkbox-group-2">
+                  <input type="checkbox" name="color-3" value="4">
+                  <div>
+                  	<div class="fz-18">Lorem Ipsum Dolor</div>
+                	</div>
+                </label>
+							</div>
+							<div class="col-sm-6 col-md-4 col-lg-3">
+								<label class="radio-group-2 checkbox-group-2">
+                  <input type="checkbox" name="color-3" value="5">
+                  <div>
+                  	<div class="fz-18">Lorem Ipsum Dolor</div>
+                	</div>
+                </label>
+							</div>
+							<div class="col-sm-6 col-md-4 col-lg-3">
+								<label class="radio-group-2 checkbox-group-2">
+                  <input type="checkbox" name="color-3" value="6">
+                  <div>
+                  	<div class="fz-18">Lorem Ipsum Dolor</div>
+                	</div>
+                </label>
+							</div>
+							<div class="col-sm-6 col-md-4 col-lg-3">
+								<label class="radio-group-2 checkbox-group-2">
+                  <input type="checkbox" name="color-3" value="7">
+                  <div>
+                  	<div class="fz-18">Lorem Ipsum Dolor</div>
+                	</div>
+                </label>
+							</div>
+							<div class="col-sm-6 col-md-4 col-lg-3">
+								<label class="radio-group-2 checkbox-group-2">
+                  <input type="checkbox" name="color-3" value="8">
+                  <div>
+                  	<div class="fz-18">Lorem Ipsum Dolor</div>
+                	</div>
+                </label>
+							</div>
+						</div>
+						<div class="row align-items-center pt-5">
+							<div class="col-6 col-md-4 text-left">
+								<a href="#!" class="back fz-16">
 									<img src="img/art/arrow-art2.svg" alt="">
-									<span>Back</span>
+									<span class="align-middle">Back</span>
 								</a>
+							</div>
+							<div class="col-6 col-md-4 text-right text-md-center">
+								<button class="btn btn-success px-5 py-2 fz-16" disabled>Next</button>
+							</div>
+						</div>
+					</div>
+					<div class="slide">
+						<h3 class="mb-4">Lorem Ipsum Dolor?</h3>
+						<div class="row justify-content-center">
+							<div class="col-sm-6 col-md-4 col-lg-3">
+							  <label class="radio-group-2 checkbox-group-2 checkbox-group-3">
+                  <input type="checkbox" name="color-4" value="1">
+                  <div>
+                  	<div class="fz-18">Lorem Ipsum Dolor</div>
+										<div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</div>
+                	</div>
+                </label>
+							</div>
+							<div class="col-sm-6 col-md-4 col-lg-3">
+								<label class="radio-group-2 checkbox-group-2 checkbox-group-3">
+                  <input type="checkbox" name="color-4" value="2">
+                  <div>
+                  	<div class="fz-18">Lorem Ipsum Dolor</div>
+										<div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</div>
+                	</div>
+                </label>
+							</div>
+							<div class="col-sm-6 col-md-4 col-lg-3">
+								<label class="radio-group-2 checkbox-group-2 checkbox-group-3">
+                  <input type="checkbox" name="color-4" value="3">
+                  <div>
+                  	<div class="fz-18">Lorem Ipsum Dolor</div>
+										<div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</div>
+                	</div>
+                </label>
+							</div>
+							<div class="col-sm-6 col-md-4 col-lg-3">
+								<label class="radio-group-2 checkbox-group-2 checkbox-group-3">
+                  <input type="checkbox" name="color-4" value="4">
+                  <div>
+                  	<div class="fz-18">Lorem Ipsum Dolor</div>
+										<div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</div>
+                	</div>
+                </label>
+							</div>
+							<div class="col-sm-6 col-md-4 col-lg-3">
+								<label class="radio-group-2 checkbox-group-2 checkbox-group-3">
+                  <input type="checkbox" name="color-4" value="5">
+                  <div>
+                  	<div class="fz-18">Lorem Ipsum Dolor</div>
+										<div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</div>
+                	</div>
+                </label>
+							</div>
+							<div class="col-sm-6 col-md-4 col-lg-3">
+								<label class="radio-group-2 checkbox-group-2 checkbox-group-3">
+                  <input type="checkbox" name="color-4" value="6">
+                  <div>
+                  	<div class="fz-18">Lorem Ipsum Dolor</div>
+										<div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</div>
+                	</div>
+                </label>
+							</div>
+							<div class="col-sm-6 col-md-4 col-lg-3">
+								<label class="radio-group-2 checkbox-group-2 checkbox-group-3">
+                  <input type="checkbox" name="color-4" value="7">
+                  <div>
+                  	<div class="fz-18">Lorem Ipsum Dolor</div>
+										<div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</div>
+                	</div>
+                </label>
+							</div>
+						</div>
+						<div class="row align-items-center pt-5">
+							<div class="col-6 col-md-4 text-left">
+								<a href="#!" class="back fz-16">
+									<img src="img/art/arrow-art2.svg" alt="">
+									<span class="align-middle">Back</span>
+								</a>
+							</div>
+							<div class="col-6 col-md-4 text-right text-md-center">
+								<button class="btn btn-success px-5 py-2 fz-16" disabled>Finish</button>
 							</div>
 						</div>
 					</div>
