--- a/fitness-actionable-traits.html
+++ b/fitness-actionable-traits.html
@@ -16,7 +16,7 @@
 				<div class="col-3 col-sm-4 px-0">
 					<a href="#!" class="btn btn-outline-success">
 						<img src="img/arrow-left.svg" alt="" class="mr-1">
-						<span>Dashboard</span>
+						<span>Lab</span>
 					</a>
 				</div>
 				<div class="col px-0 text-center">
