--- a/age-related-macular-egeneration.html
+++ b/age-related-macular-egeneration.html
@@ -56,7 +56,18 @@
 						<div class="card card-age">
 							<h5 class="mb-3">About</h5>
 							<p>Age-related macular degeneration (AMD) is an eye condition that can obscure the sharp, central vision you need for reading and other related activities, such as driving.  "Age-related" means that it often occurs in older people. "Macular" simply refers to a part of your eye called the macula.</p>
-							<div class="pt-2"><a href="#!">Read more<img src="img/arrow-right-green.svg" alt="" width="7" class="ml-2"></a></div>
+							<div class="collapse-1 collapse">
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum dolore, rerum obcaecati libero a sit odit, iure tempora! Corrupti sint commodi iste, accusamus neque optio cum, placeat. Sit, delectus ipsum.</p>
+								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis maxime non fugit obcaecati, cupiditate corrupti quod natus rem at, in ratione omnis ab porro. Iste nobis error sit quia sunt.</p>
+								<div class="pt-2">
+									<a href=".collapse-1" data-toggle="collapse">Read less<img src="img/arrow-right-green.svg" alt="" width="7" class="ml-2"></a>
+								</div>
+							</div>
+							<div class="collapse-1 collapse show">
+								<div class="pt-2">
+									<a href=".collapse-1" data-toggle="collapse">Read more<img src="img/arrow-right-green.svg" alt="" width="7" class="ml-2"></a>
+								</div>
+							</div>
 						</div>
 						<div class="row justify-content-center text-center pt-md-3 mt-md-1">
 							<div class="col-xl-5 fz-22 pt-5 pb-4 pb-md-5 text-black">Age Related Macular Degeneration Result In Scale</div>
@@ -88,7 +99,7 @@
 					</div>
 				</div>
 			</section>
-		
+
 		</div>
 
 		<section class="section bg-white">
@@ -101,9 +112,16 @@
 							<div class="row">
 								<div class="col-xl-11">
 									<p>Variations in the two genes analyzed have been closely connected to both the development of AMD and whether it progresses to the advanced stages of the condition...</p>
+									<div class="collapse-2 collapse">
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum dolore, rerum obcaecati libero a sit odit, iure tempora! Corrupti sint commodi iste, accusamus neque optio cum, placeat. Sit, delectus ipsum.</p>
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis maxime non fugit obcaecati, cupiditate corrupti quod natus rem at, in ratione omnis ab porro. Iste nobis error sit quia sunt.</p>
+										<a href=".collapse-2" data-toggle="collapse">Read less<img src="img/arrow-right-green.svg" alt="" width="7" class="ml-2"></a>
+									</div>
+									<div class="collapse-2 collapse show">
+										<a href=".collapse-2" data-toggle="collapse">Read more<img src="img/arrow-right-green.svg" alt="" width="7" class="ml-2"></a>
+									</div>
 								</div>
 							</div>
-							<a href="#!">Read more<img src="img/arrow-right-green.svg" alt="" width="7" class="ml-2"></a>
 						</div>
 						<div class="col-lg pt-3 mt-3 pt-lg-0 mt-lg-0">
 							<div class="card card-3 text-left pb-3 text-black o-hidden">
@@ -164,7 +182,14 @@
 										<li>The shape of objects appears distorted.</li>
 										<li>Straight lines look wavy or crooked.</li>
 									</ul>
-									<a href="#!">See More<img src="img/arrow-right-green.svg" alt="" width="7" class="ml-2"></a>
+									<div class="collapse-3 collapse">
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum dolore, rerum obcaecati libero a sit odit, iure tempora! Corrupti sint commodi iste, accusamus neque optio cum, placeat. Sit, delectus ipsum.</p>
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis maxime non fugit obcaecati, cupiditate corrupti quod natus rem at, in ratione omnis ab porro. Iste nobis error sit quia sunt.</p>
+										<a href=".collapse-3" data-toggle="collapse">See less<img src="img/arrow-right-green.svg" alt="" width="7" class="ml-2"></a>
+									</div>
+									<div class="collapse-3 collapse show">
+										<a href=".collapse-3" data-toggle="collapse">See more<img src="img/arrow-right-green.svg" alt="" width="7" class="ml-2"></a>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -185,7 +210,14 @@
 										<li>Are overweight</li>
 										<li>Smoke cigarettes or other tobacco products</li>
 									</ul>
-									<a href="#!">See More<img src="img/arrow-right-green.svg" alt="" width="7" class="ml-2"></a>
+									<div class="collapse-4 collapse">
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum dolore, rerum obcaecati libero a sit odit, iure tempora! Corrupti sint commodi iste, accusamus neque optio cum, placeat. Sit, delectus ipsum.</p>
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis maxime non fugit obcaecati, cupiditate corrupti quod natus rem at, in ratione omnis ab porro. Iste nobis error sit quia sunt.</p>
+										<a href=".collapse-4" data-toggle="collapse">See less<img src="img/arrow-right-green.svg" alt="" width="7" class="ml-2"></a>
+									</div>
+									<div class="collapse-4 collapse show">
+										<a href=".collapse-4" data-toggle="collapse">See more<img src="img/arrow-right-green.svg" alt="" width="7" class="ml-2"></a>
+									</div>
 								</div>
 							</div>
 						</div>
@@ -204,7 +236,14 @@
 								<h5 class="fz-22 mb-3">Risk Management & Tests</h5>
 								<div class="text-left">
 									<p>Eye doctors can check for AMD as part of a comprehensive dilated eye exam. The exam is simple and painless — your doctor will give you some eye drops to dilate (widen) your pupil and then check your eyes for AMD and other eye problems. Your doctor may also recommend doing a test called an optical coherence tomogram (OCT). This test lets the doctor see the back of your eye.</p>
-									<a href="#!">Read more<img src="img/arrow-right-green.svg" alt="" width="7" class="ml-2"></a>
+									<div class="collapse-5 collapse">
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatum dolore, rerum obcaecati libero a sit odit, iure tempora! Corrupti sint commodi iste, accusamus neque optio cum, placeat. Sit, delectus ipsum.</p>
+										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis maxime non fugit obcaecati, cupiditate corrupti quod natus rem at, in ratione omnis ab porro. Iste nobis error sit quia sunt.</p>
+										<a href=".collapse-5" data-toggle="collapse">Read less<img src="img/arrow-right-green.svg" alt="" width="7" class="ml-2"></a>
+									</div>
+									<div class="collapse-5 collapse show">
+										<a href=".collapse-5" data-toggle="collapse">Read more<img src="img/arrow-right-green.svg" alt="" width="7" class="ml-2"></a>
+									</div>
 								</div>
 							</div>
 						</div>
