--- a/oto-platinum3.html
+++ b/oto-platinum3.html
@@ -41,13 +41,13 @@
 					<div class="col-md-10 col-lg-6 col-xl-5">
 						<div class="pr-lg-5">
 							<h3 class="fz-28 text-black mb-3 mt-3 pt-1 mb-4">Get a Personalized Workout Program with Easy-to-Follow Videos from Pro Trainers, All Based on Your DNA!</h3>
-							<p class="fz-18 pt-sm-5">Download <b>your personalized app</b> today and get in <b>shape faster and easier</b> than ever before.</p>
+							<p class="fz-18 pr-sm-5 mr-sm-5">Download <b>your personalized app</b> today and get in <b>shape faster and easier</b> than ever before.</p>
 						</div>
 						<div class="bunner-wrap d-lg-none py-5 py-sm-4">
 							<img src="img/oto-platinum/image-2.png" alt="">
 							<img src="img/oto-platinum/bg.svg" alt="" class="bunner-bg bunner-bg2">
 						</div>
-						<p class="fz-16 pt-sm-5 text-center text-sm-left mt-sm-5">As featured in</p>
+						<p class="fz-16 text-center text-sm-left mt-sm-5">As featured in</p>
 						<div class="row row-1 align-items-center justify-content-center justify-content-sm-start">
 							<div class="col-auto mb-3 mb-md-0 pb-2">
 								<img src="img/oto-platinum/1.svg" alt="">
@@ -64,7 +64,7 @@
 						</div>
 					</div>
 					<div class="col-lg-6 d-none d-lg-block">
-						<img src="img/oto-platinum/image-2.png" alt="">
+						<img src="img/oto-platinum/image-2.png" alt="" class="mt-70">
 					</div>
 				</div>
 				<hr class="hr pb-3">
@@ -99,7 +99,7 @@
 						<div class="card card-card h-auto py-4 px-5 mb-5 get-it">
 							<div class="row align-items-center">
 								<div class="col-lg text-lg-left fz-26 text-black pb-4 pb-lg-0"><b>Click the Button to Unlock Your 7-Day Free <br>Trial Now!</b> (Just $29/month after that.)</div>
-								<div class="col-lg-auto"><button class="btn btn-try"><span>Get It Now</span></button></div>
+								<div class="col-lg-auto"><button class="btn btn-try btn-try2"><span>Get It Now</span></button></div>
 							</div>
 						</div>
 						<div class="row align-items-center text-center">
