--- a/oto-platinum2.html
+++ b/oto-platinum2.html
@@ -40,7 +40,7 @@
 				<div class="row no-gutters justify-content-center justify-content-xl-end mt-3 pt-3 pb-md-5">
 					<div class="col-md-10 col-lg-6 col-xl-5">
 						<div class="pr-lg-5">
-							<div class="optimize optimize-3">
+							<div class="optimize optimize-3 d-inline-block">
 								<div class="row row-2 align-items-center">
 									<span class="col">Your Order Is Almost Complete! <b>Get Your <span class="text-uppercase">FREE TRIAL</span> Now.</b></span>
 								</div>
@@ -49,7 +49,7 @@
 							<p class="fz-18 pr-sm-5 mr-sm-5">Download <b>your personalized app</b> today and get in <b>shape faster and easier</b> than ever before.</p>
 						</div>
 						<div class="bunner-wrap d-lg-none py-5 py-sm-4">
-							<img src="img/oto-platinum/image-2.png" alt="">
+							<img src="img/oto-platinum/image-2.svg" alt="">
 							<img src="img/oto-platinum/bg.svg" alt="" class="bunner-bg bunner-bg2">
 						</div>
 						<p class="fz-16 text-center text-sm-left mt-sm-5">As featured in</p>
@@ -69,7 +69,7 @@
 						</div>
 					</div>
 					<div class="col-lg-6 d-none d-lg-block">
-						<img src="img/oto-platinum/image-2.png" alt="" class="mt-70">
+						<img src="img/oto-platinum/image-2.svg" alt="" class="mt-70">
 					</div>
 				</div>
 				<hr class="hr pb-3">
