--- a/oto-platinum4.html
+++ b/oto-platinum4.html
@@ -53,7 +53,7 @@
 							<p class="fz-18 pr-sm-5 mr-sm-5">Download <b>your personalized app</b> today and get in <b>shape faster and easier</b> than ever before.</p>
 						</div>
 						<div class="bunner-wrap d-lg-none py-5 py-sm-4">
-							<img src="img/oto-platinum/image-2.png" alt="">
+							<img src="img/oto-platinum/image-2.svg" alt="">
 							<img src="img/oto-platinum/bg.svg" alt="" class="bunner-bg bunner-bg2">
 						</div>
 						<p class="fz-16 text-center text-sm-left mt-sm-5">As featured in</p>
@@ -73,7 +73,7 @@
 						</div>
 					</div>
 					<div class="col-lg-6 d-none d-lg-block">
-						<img src="img/oto-platinum/image-2.png" alt="" class="mt-70">
+						<img src="img/oto-platinum/image-2.svg" alt="" class="mt-70">
 					</div>
 				</div>
 				<hr class="hr pb-3">
@@ -111,7 +111,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="row align-items-end justify-content-center fz-16 mb-md-2 pt-4">
+						<div class="row align-items-end justify-content-center fz-16 mb-md-2 pt-4 o-hidden">
 							<div class="col-md col-lg-5 col-xl-4 mb-5">
 								<div class="card card-card">
 									<div class="fz-18 text-black font-weight-bold mb-1">Monthly Plan</div>
@@ -128,7 +128,7 @@
 								</div>
 							</div>
 							<div class="col-md col-lg-5 col-xl-4 mb-5">
-								<div class="card card-card">
+								<div class="card card-card sticker">
 									<div class="fz-18 text-black font-weight-bold mb-1">Yearly Plan</div>
 									<div class="bg-bg fz-45 text-black mb-3"><span class="fz-24 mr-1">$</span>16.41<span class="fz-18 text-gray ml-1">/month</span></div>
 									<div class="mb-3 text-orange"><b>Annual Fee: 197</b></div>
