--- a/disease-report-dashboard.html
+++ b/disease-report-dashboard.html
@@ -683,6 +683,175 @@
 							</div>
 						</div>
 					</div>
+					<div class="col-lg-6 mb-3 pb-3"></div>
+					<div class="col-lg-6 mb-3 pb-3">
+						<div class="card card-2 card-b-1 disabled">
+							<div class="fidelity-head-2">
+								<div class="row no-gutters align-items-sm-center flex-nowrap">
+									<div class="col">
+										<div class="row row-1 align-items-center">
+											<div class="col-auto pr-0 mb-3 mb-sm-0">
+												<img src="img/new/1.svg" alt="">
+											</div>
+											<div class="col-sm">
+												<div class="pl-xl-1">
+													<h6>G6PD Deficiency</h6>
+													<div class="stars stars-sm mb-0">
+														<span class="star"></span>
+														<span class="star"></span>
+														<span class="star"></span>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="col-auto">
+										<button class="btn btn-outline-success btn-suc fz-14 px-4 py-1 ml-sm-3">Coming Soon</button>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-6 mb-3 pb-3">
+						<div class="card card-2 card-b-1 disabled">
+							<div class="fidelity-head-2">
+								<div class="row no-gutters align-items-sm-center flex-nowrap">
+									<div class="col">
+										<div class="row row-1 align-items-center">
+											<div class="col-auto pr-0 mb-3 mb-sm-0">
+												<img src="img/new/2.svg" alt="">
+											</div>
+											<div class="col-sm">
+												<div class="pl-xl-1">
+													<h6>Familial Hypercholesterolemia</h6>
+													<div class="stars stars-sm mb-0">
+														<span class="star"></span>
+														<span class="star"></span>
+														<span class="star"></span>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="col-auto">
+										<button class="btn btn-outline-success btn-suc fz-14 px-4 py-1 ml-sm-3">Coming Soon</button>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-6 mb-3 pb-3">
+						<div class="card card-2 card-b-1 disabled">
+							<div class="fidelity-head-2">
+								<div class="row no-gutters align-items-sm-center flex-nowrap">
+									<div class="col">
+										<div class="row row-1 align-items-center">
+											<div class="col-auto pr-0 mb-3 mb-sm-0">
+												<img src="img/new/3.svg" alt="">
+											</div>
+											<div class="col-sm">
+												<div class="pl-xl-1">
+													<h6>Transthyretin-Related Amyloidosis</h6>
+													<div class="stars stars-sm mb-0">
+														<span class="star"></span>
+														<span class="star"></span>
+														<span class="star"></span>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="col-auto">
+										<button class="btn btn-outline-success btn-suc fz-14 px-4 py-1 ml-sm-3">Coming Soon</button>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-6 mb-3 pb-3">
+						<div class="card card-2 card-b-1 disabled">
+							<div class="fidelity-head-2">
+								<div class="row no-gutters align-items-sm-center flex-nowrap">
+									<div class="col">
+										<div class="row row-1 align-items-center">
+											<div class="col-auto pr-0 mb-3 mb-sm-0">
+												<img src="img/new/4.svg" alt="">
+											</div>
+											<div class="col-sm">
+												<div class="pl-xl-1">
+													<h6>MUTYH-Associated Polyposis</h6>
+													<div class="stars stars-sm mb-0">
+														<span class="star"></span>
+														<span class="star"></span>
+														<span class="star"></span>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="col-auto">
+										<button class="btn btn-outline-success btn-suc fz-14 px-4 py-1 ml-sm-3">Coming Soon</button>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-6 mb-3 pb-3">
+						<div class="card card-2 card-b-1 disabled">
+							<div class="fidelity-head-2">
+								<div class="row no-gutters align-items-sm-center flex-nowrap">
+									<div class="col">
+										<div class="row row-1 align-items-center">
+											<div class="col-auto pr-0 mb-3 mb-sm-0">
+												<img src="img/new/5.svg" alt="">
+											</div>
+											<div class="col-sm">
+												<div class="pl-xl-1">
+													<h6>Hereditary Thrombophilia</h6>
+													<div class="stars stars-sm mb-0">
+														<span class="star"></span>
+														<span class="star"></span>
+														<span class="star"></span>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="col-auto">
+										<button class="btn btn-outline-success btn-suc fz-14 px-4 py-1 ml-sm-3">Coming Soon</button>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-lg-6 mb-3 pb-3">
+						<div class="card card-2 card-b-1 disabled">
+							<div class="fidelity-head-2">
+								<div class="row no-gutters align-items-sm-center flex-nowrap">
+									<div class="col">
+										<div class="row row-1 align-items-center">
+											<div class="col-auto pr-0 mb-3 mb-sm-0">
+												<img src="img/new/6.svg" alt="">
+											</div>
+											<div class="col-sm">
+												<div class="pl-xl-1">
+													<h6>Alpha-1 Antitrypsin Deficiency</h6>
+													<div class="stars stars-sm mb-0">
+														<span class="star"></span>
+														<span class="star"></span>
+														<span class="star"></span>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="col-auto">
+										<button class="btn btn-outline-success btn-suc fz-14 px-4 py-1 ml-sm-3">Coming Soon</button>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 
 				<div class="notif">
