--- a/lifetime-membership-OTO.html
+++ b/lifetime-membership-OTO.html
@@ -46,7 +46,7 @@
 							</div>
 						</div>
 						<h3 class="fz-41 text-black my-4 pt-4 pb-3">Discover The Other Critical Risks Hiding in Your Body.</h3>
-						<p class="fz-16 pb-2 mt-md-5 pt-md-5">A lifetime of unlimited updates, free traits, and exclusive perks. Get VIP access to our newest reports and a free 1-on-1 consultation with a genetic health expert who can help you get the most out of your DNA.</p>
+						<p class="fz-16 pb-2">A lifetime of unlimited updates, free traits, and exclusive perks. Get VIP access to our newest reports and a free 1-on-1 consultation with a genetic health expert who can help you get the most out of your DNA.</p>
 						<div class="bunner-wrap d-lg-none py-sm-4">
 							<img src="img/oto-platinum/image-3.png" alt="">
 							<img src="img/oto-platinum/bg-5.svg" alt="" class="bunner-bg5 bunner-bg6">
