--- a/quarterly-vs-yearly-vs-lifetime.html
+++ b/quarterly-vs-yearly-vs-lifetime.html
@@ -89,27 +89,27 @@
 	          <div class="col-md-4 pb-5">
 	            <img src="img/oto-platinum/orange-1.svg" alt="">
 	            <div class="fz-18 font-weight-bold py-3">Unlimited updates and FREE additional traits.</div>
-	            <div class="fz-16 pt-4">Get constant updates to your DNA reports and the most up-to-date info with the latest research. Receive an additional free trait in every update!</div>
+	            <div class="fz-16">Get constant updates to your DNA reports and the most up-to-date info with the latest research. Receive an additional free trait in every update!</div>
 	          </div>
 	          <div class="col-md-4 pb-5">
 	            <img src="img/oto-platinum/orange-2.svg" alt="">
 	            <div class="fz-18 font-weight-bold py-3">Instantly unlock your Disease Report</div>
-	            <div class="fz-16 pt-4">Discover your risks for potentially life-threatening diseases, including Parkinson’s, Alzheimer’s, Celiac, and more.</div>
+	            <div class="fz-16">Discover your risks for potentially life-threatening diseases, including Parkinson’s, Alzheimer’s, Celiac, and more.</div>
 	          </div>
 	          <div class="col-md-4 pb-5">
 	            <img src="img/oto-platinum/orange-3.svg" alt="">
 	            <div class="fz-18 font-weight-bold py-3">New: Carrier Trait Report (coming in 2020)</div>
-	            <div class="fz-16 pt-4">Learn what conditions you might pass on to your children.</div>
+	            <div class="fz-16">Learn what conditions you might pass on to your children.</div>
 	          </div>
 	          <div class="col-md-4 pb-5">
 	            <img src="img/oto-platinum/orange-4.svg" alt="">
 	            <div class="fz-18 font-weight-bold py-3">1-on-1 Consultation with a Genetic Health Expert</div>
-	            <div class="fz-16 pt-4">Get the most out of your DNA. Get free tips for a healthier lifestyle, diet, and exercise routine based on your results.</div>
+	            <div class="fz-16">Get the most out of your DNA. Get free tips for a healthier lifestyle, diet, and exercise routine based on your results.</div>
 	          </div>
 	          <div class="col-md-4 pb-5">
 	            <img src="img/oto-platinum/orange-5.svg" alt="">
 	            <div class="fz-18 font-weight-bold py-3">Be part of our exclusive Facebook community.</div>
-	            <div class="fz-16 pt-4">Meet and engage with fellow members. Get additional free tips and insights from our health experts on improving your body and health.</div>
+	            <div class="fz-16">Meet and engage with fellow members. Get additional free tips and insights from our health experts on improving your body and health.</div>
 	          </div>
 	        </div>
 				</div>
